fix: remove mission-control from public repo — is private/local only

--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,4 @@ projects/0003_city-apps/poxdorf/
 projects/github-contributions/hive-n8n/
 projects/github-contributions/openagents-n8n/
 projects/hive-n8n-integration/
+mission-control/
